GetAllAttr
