# golang/api/common.go
@@ -1,8 +1,8 @@
 package api
 
 var (
-	TYPE_CHAT_COMPLETION int32 = 1
-	TYPE_EDITS                 = 2
+	TYPE_CHAT  int32 = 1
+	TYPE_EDITS       = 2
 )
 
 type App struct {
@@ -15,17 +15,18 @@ type App_S struct {
 }
 
 type Attr struct {
-	ID      uint   `json:"id" example:"0"`                                                              // Example ID
-	Type    int32  `json:"type,omitempty" enums:"1,2" example:"1"`                                      // 1 chat completion 2 img
-	Name    string `json:"name,omitempty" example:"商城商品"`                                               // Tab
-	Context string `json:"context,omitempty" example:"按照stable diffusion的关键字要求，给出主题鲜明的prompt,并使用英文文回答"` // 内容
+	ID          uint   `json:"id" example:"0"`                                                              // Example ID
+	Type        int32  `json:"type,omitempty" enums:"1,2" example:"1"`                                      // 1 chat completion 2 img
+	Name        string `json:"name,omitempty" example:"商城商品"`                                               // Tab
+	ContextType int32  `json:"context_type,omitempty" example:"1"`                                          // 1 chat 2 edit
+	Context     string `json:"context,omitempty" example:"按照stable diffusion的关键字要求，给出主题鲜明的prompt,并使用英文文回答"` // 内容
 }
 
 type ChatAttr struct {
-	ID      uint
-	Type    int32  `json:"type,omitempty" example:"1"`    // 1 chat completion 2 img
-	Name    string `json:"name,omitempty" example:"商城商品"` // Tab
-	Context []ChatCompletionMessage
+	ID      uint                    `json:"id,omitempty"`
+	Type    int32                   `json:"type,omitempty" example:"1"`    // 1 纯文字 2 img
+	Name    string                  `json:"name,omitempty" example:"商城商品"` // 属性名称
+	Context []ChatCompletionMessage `json:"context,omitempty"`
 }
 
 type UserMessage struct {
