# golang/docs/swagger.json
@@ -82,6 +82,35 @@
                 }
             }
         },
+        "/v1/apps/attrs": {
+            "get": {
+                "description": "Get all attrs",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Attr"
+                ],
+                "summary": "Get all Attrs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.Attr"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/common.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/apps/{appID}/attrs/{attrID}": {
             "put": {
                 "description": "Update an attribute by providing the app ID, attribute ID, and updated attribute information",
@@ -248,7 +277,7 @@
                 "tags": [
                     "Attr"
                 ],
-                "summary": "Get all Attrs",
+                "summary": "Get  all Attrs by App ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -778,6 +807,11 @@
                     "type": "string",
                     "example": "按照stable diffusion的关键字要求，给出主题鲜明的prompt,并使用英文文回答"
                 },
+                "context_type": {
+                    "description": "1 chat 2 edit",
+                    "type": "integer",
+                    "example": 1
+                },
                 "id": {
                     "description": "Example ID",
                     "type": "integer",
@@ -812,12 +846,12 @@
                     "type": "integer"
                 },
                 "name": {
-                    "description": "Tab",
+                    "description": "属性名称",
                     "type": "string",
                     "example": "商城商品"
                 },
                 "type": {
-                    "description": "1 chat completion 2 img",
+                    "description": "1 纯文字 2 img",
                     "type": "integer",
                     "example": 1
                 }
